2014-01-12 Unified command names for presenter and plot addon
2014-01-10 Added CustomScoring methods to Connection module.
2014-01-09 Added CustomScoring methods to True/False module.
2014-01-09 Added show and hide methods to Page Progress module.
2014-01-08 Fixed problem with Memo Game when trying to read state saved in different platform
2014-01-08 Fixed problem with relative URLs in inline styles.
2014-01-08 Changed True/False property type to accept HTML formatting.
2014-01-02 Libraries removed from addon descriptor
2013-12-31 Fixed problem with hiding multiplegap under other addons
2013-12-30 Fixed problem with Animation addon on Firefox
2013-12-18 Added new addon: Line
2013-12-17 Fixed problem with popup's custom closing time and initialization of Glossary addon
2013-12-16 Header for Table of Contents is now editable
2013-12-16 Fixed tests in Line Number and Audio addons
2013-12-13 Fixed problem with custom styles in Glossary addon
2013-12-13 Fixed problem with placing Glossary widget into closing popup
2013-12-13 Fixed problem with centering the mismatch mark in memo game
2013-12-11 Fixed problem with restoring state from same lesson but other source
2013-12-11 Close popup while changing page
2013-12-11 Fixed problem with navigation toolbars position
2013-12-10 Fixed problem with page numbers in Table Of Contents addon
2013-12-10 Fixed problem with counting errors and sending events on setState, setShowErrorsMode and setWorkMode in Hangman addon
2013-12-10 Fixed problem with navigation toolbars and report module
2013-12-09 Removed reaction on Reset in Check Counter module
2013-12-09 Removed console.logs in Double State Button
2013-12-09 Fixed problem with drawRange function in Line Number addon
2013-12-09 Fixed problem with Audio addon on iPads with getState function and AC scripts
2013-12-06 Fixed problem with rendering mathjax in text module while loading state
2013-12-05 Fixed problem with selecting Paragraph addon in the editor