@@ -1,41 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" ?> 
-<page>
+<page scoring="zeroOne">
 
 	<modules>
 		
-		<choiceModule id="n34" left="15" top="10" width="40" height="40">
+		<choiceModule id="n34" left="20" top="20" width="400" height="300">
 			<choice isMulti="true"/>
 			<option value="5">To jest opcja pierwsza za 5 punktów</option>
 			<option value="0">To jest opcja druga za 0 punktów</option>
 			<option value="1">To jest opcja trzecia za 1 punkt</option>
 		</choiceModule>
 		
-		<buttonModule  left="65" top="50" width="10" height="10" style="">
+		<pageProgressModule id="2frcd65" left="20" top="350" width="200" height="20">
+		</pageProgressModule>
+
+		<buttonModule  left="450" top="350" width="50" height="50" style="">
 			<button type="checkAnswers" text=""/>
 		</buttonModule>
 		
-		<buttonModule  left="75" top="50" width="10" height="10" style="">
+		<buttonModule  left="510" top="350" width="50" height="50" style="">
 			<button type="reset" text=""/>
-		</buttonModule>
-		
-		<feedbackModule left="15" top="80" width="70" height="20" style="background-color:white">
-			<feedback value="1">
-				To jest słabo punktowana opcja. Tylko 1 punkt
-			</feedback>
-			<feedback value="5">
-				Tak sobie. 5 punktów
-			</feedback>
-			<feedback value="10">
-				Strzał w dziesiatkę. Całe uzyskujesz 10 punktów.
-			</feedback>
-		</feedbackModule>
-		
-		<buttonModule  left="0" top="90" width="10" height="10" style="">
-			<button type="prevPage" text=""/>
-		</buttonModule>
-		
-		<buttonModule  left="90" top="90" width="10" height="10" style="">
-			<button type="nextPage" text=""/>
 		</buttonModule>
 		
 	</modules>
